--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <section class="container unique-components">
@@ -18,7 +23,18 @@
         adds up to one exceptional taste sensation.
       </p>
       <ul class="unique-components-list">
-        <li class="unique-components-item"></li>
+        <li class="unique-components-item">
+          <a href="" class="unique-components-link">
+            <div class="overlay">
+              <img src="" srcset="" alt="" width="" height="" />
+              <h3 class="overlay-title"></h3>
+              <p class="overlay-paragraph"></p>
+            </div>
+            <div class="component-info">
+              <p class="component-paragraph">MILK CHOCOLATE</p>
+            </div>
+          </a>
+        </li>
         <li class="unique-components-item"></li>
         <li class="unique-components-item"></li>
         <li class="unique-components-item"></li>
