--- a/unique-components.html
+++ b/unique-components.html
@@ -31,11 +31,28 @@
             <div class="flip-card-inner">
               <div class="flip-card-front" style="background: #fd9222">
                 <img
+                  class="img-mobile"
+                  srcset="
+                    ./images/chocolate-224x171-mobile.png    224w,
+                    ./images/chocolate-448x342-mobile@2x.png 448w
+                  "
+                  sizes="(min-width: 320px) 320px"
                   src="./images/chocolate-224x171-mobile.png"
-                  srcset="./images/chocolate-224x171-mobile.png x1, ./images/chocolate-448x342-mobile@2x.png x2"
                   alt="couple pieces of brown chocolate"
                   width="224"
                   height="171"
+                />
+                <img
+                  class="img-desktop"
+                  srcset="
+                    ./images/chocolate-206x160-desktop.png    206w,
+                    ./images/chocolate-412x320-desktop@2x.png 412w
+                  "
+                  sizes="(min-width: 1200px) 1200px"
+                  src="./images/chocolate-224x171-mobile.png"
+                  alt="couple pieces of brown chocolate"
+                  width="206"
+                  height="160"
                 />
                 <p class="component-name" style="color: #fff">MILK CHOCOLATE</p>
               </div>
@@ -66,11 +83,28 @@
             <div class="flip-card-inner">
               <div class="flip-card-front">
                 <img
+                  class="img-mobile"
+                  srcset="
+                    ./images/milk-224x171-mobile.png    224w,
+                    ./images/milk-448x342-mobile@2x.png 448w
+                  "
+                  sizes="(min-width: 320px) 320px"
                   src="./images/milk-224x171-mobile.png"
-                  srcset="./images/milk-224x171-mobile.png x1, ./images/milk-224x171-mobile@2x.png x2"
-                  alt="couple pieces of brown chocolate"
+                  alt="bootle of milk"
                   width="224"
                   height="171"
+                />
+                <img
+                  class="img-desktop"
+                  srcset="
+                    ./images/milk-206x160-desktop.png    206w,
+                    ./images/milk-412x320-desktop@2x.png 412w
+                  "
+                  sizes="(min-width: 1200px) 1200px"
+                  src="./images/milk-224x171-mobile.png"
+                  alt="bootle of milk"
+                  width="206"
+                  height="160"
                 />
                 <p class="component-name">MILK</p>
               </div>
@@ -105,11 +139,28 @@
                 style="background: #1e1823; border: #1e1823"
               >
                 <img
+                  class="img-mobile"
+                  srcset="
+                    ./images/hazelnuts-224x171-mobile.png    224w,
+                    ./images/hazelnuts-448x342-mobile@2x.png 448w
+                  "
+                  sizes="(min-width: 320px) 320px"
                   src="./images/hazelnuts-224x171-mobile.png"
-                  srcset="./images/hazelnuts-224x171-mobile.png x1, ./images/hazelnuts-224x171-mobile@2x.png x2"
-                  alt="couple pieces of brown chocolate"
+                  alt="a couple of hazelnuts"
                   width="224"
                   height="171"
+                />
+                <img
+                  class="img-desktop"
+                  srcset="
+                    ./images/hazelnuts-206x160-desktop.png    206w,
+                    ./images/hazelnuts-412x320-desktop@2x.png 412w
+                  "
+                  sizes="(min-width: 1200px) 1200px"
+                  src="./images/hazelnuts-224x171-mobile.png"
+                  alt="a couple of hazelnuts"
+                  width="206"
+                  height="160"
                 />
                 <p class="component-name" style="color: #fff">NUTS</p>
               </div>
@@ -141,11 +192,28 @@
             <div class="flip-card-inner">
               <div class="flip-card-front">
                 <img
+                  class="img-mobile"
+                  srcset="
+                    ./images/chocolate-covered-raisins-224x171-mobile.png    224w,
+                    ./images/chocolate-covered-raisins-448x342-mobile@2x.png 448w
+                  "
+                  sizes="(min-width: 320px) 320px"
                   src="./images/chocolate-covered-raisins-224x171-mobile.png"
-                  srcset="./images/chocolate-covered-raisins-224x171-mobile.png x1, ./images/chocolate-covered-raisins-224x171-mobile@2x.png x2"
-                  alt="couple pieces of brown chocolate"
+                  alt="a handful of chocolate covered raisins"
                   width="224"
                   height="171"
+                />
+                <img
+                  class="img-desktop"
+                  srcset="
+                    ./images/chocolate-covered-raisins-206x160-desktop.png    206w,
+                    ./images/chocolate-covered-raisins-412x320-desktop@2x.png 412w
+                  "
+                  sizes="(min-width: 1200px) 1200px"
+                  src="./images/chocolate-covered-raisins-224x171-mobile.png"
+                  alt="a handful of chocolate covered raisins"
+                  width="206"
+                  height="160"
                 />
                 <p class="component-name">SEMI - SWEET CHOCOLATE</p>
               </div>
