--- a/unique-components.html
+++ b/unique-components.html
@@ -123,8 +123,11 @@
                   mammals. It is the primary source of nutrition for young
                   mammals (including breastfed human infants) before they are
                   able to digest solid food. Early-lactation milk, which is
-                  called colostrum, contains antibodies that strengthen the
-                  immune system.
+                  called colostrum,
+                  <span class="overflow-ellipsis"
+                    >contains antibodies that strengthen the immune
+                    system.</span
+                  >
                 </p>
               </div>
             </div>
@@ -179,8 +182,11 @@
                   contain healthy nutrients. When eaten as part of a
                   nutrient-dense diet, these 9 nuts may offer benefits such as
                   reducing your risk of heart disease. They’re a good source of
-                  fiber, healthy fats, and plant protein. Plus, they’re great on
-                  their own.
+                  fiber,
+                  <span class="overflow-ellipsis"
+                    >healthy fats, and plant protein. Plus, they’re great on
+                    their own.</span
+                  >
                 </p>
               </div>
             </div>
@@ -234,8 +240,11 @@
                   One of the best ways to gain an understanding of this type of
                   chocolate is to compare it to a different type of chocolate.
                   Semisweet is darker than milk chocolate. In a taste
-                  comparison, it has a slightly bitter taste whereas milk
-                  chocolate is sweeter.
+                  comparison,
+                  <span class="overflow-ellipsis"
+                    >it has a slightly bitter taste whereas milk chocolate is
+                    sweeter.</span
+                  >
                 </p>
               </div>
             </div>
