--- a/text.html
+++ b/text.html
@@ -30,6 +30,101 @@
                   width="206"
                   height="160"
                 />
+
+
+
+
+
+
+                <img
+                  class="img-mobile"
+                  srcset="
+                    ./images/milk-224x171-mobile.png    224w,
+                    ./images/milk-448x342-mobile@2x.png 448w
+                  "
+                  sizes="(min-width: 320px) 320px"
+                  src="./images/milk-224x171-mobile.png"
+                  alt="bootle of milk"
+                  width="224"
+                  height="171"
+                />
+                <img
+                  class="img-desktop"
+                  srcset="
+                    ./images/milk-206x160-desktop.png    206w,
+                    ./images/milk-412x320-desktop@2x.png 412w
+                  "
+                  sizes="(min-width: 1200px) 1200px"
+                  src="./images/milk-224x171-mobile.png"
+                  alt="bootle of milk"
+                  width="206"
+                  height="160"
+                />
+
+
+
+
+
+
+
+
+
+
+                <img
+                  class="img-mobile"
+                  srcset="
+                    ./images/hazelnuts-224x171-mobile.png    224w,
+                    ./images/hazelnuts-448x342-mobile@2x.png 448w
+                  "
+                  sizes="(min-width: 320px) 320px"
+                  src="./images/hazelnuts-224x171-mobile.png"
+                  alt="a couple of hazelnuts"
+                  width="224"
+                  height="171"
+                />
+                <img
+                  class="img-desktop"
+                  srcset="
+                    ./images/hazelnuts-206x160-desktop.png    206w,
+                    ./images/hazelnuts-412x320-desktop@2x.png 412w
+                  "
+                  sizes="(min-width: 1200px) 1200px"
+                  src="./images/hazelnuts-224x171-mobile.png"
+                  alt="a couple of hazelnuts"
+                  width="206"
+                  height="160"
+                />
+
+
+
+
+
+
+
+                <img
+                  class="img-mobile"
+                  srcset="
+                    ./images/chocolate-covered-raisins-224x171-mobile.png    224w,
+                    ./images/chocolate-covered-raisins-448x342-mobile@2x.png 448w
+                  "
+                  sizes="(min-width: 320px) 320px"
+                  src="./images/chocolate-covered-raisins-224x171-mobile.png"
+                  alt="a handful of chocolate covered raisins"
+                  width="224"
+                  height="171"
+                />
+                <img
+                  class="img-desktop"
+                  srcset="
+                    ./images/chocolate-covered-raisins-206x160-desktop.png    206w,
+                    ./images/chocolate-covered-raisins-412x320-desktop@2x.png 412w
+                  "
+                  sizes="(min-width: 1200px) 1200px"
+                  src="./images/chocolate-covered-raisins-224x171-mobile.png"
+                  alt="a handful of chocolate covered raisins"
+                  width="206"
+                  height="160"
+                />
     </picture>
   </body>
 </html>
